<resources>
    <string name="app_name">WakeBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_for_setting_alarms_requiring_movement">Fragment for setting alarms requiring movement</string>
    <string name="fragment_for_setting_math_alarm">Fragment for setting math alarm</string>
    <string name="fragment_for_setting_barcode_alarm">Fragment for setting barcode alarm</string>
    <string name="barcode_one">Barcode 1234</string>
    <string name="barcode_two">Barcode 5678</string>
    <string name="barcode_three">Barcode 1111</string>
    <string name="select_barcode">Select Barcode</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="placeholder_alarm_screen">Placeholder Alarm Screen</string>
    <string name="barcode">Barcode</string>
    <string name="movement">Movement</string>
    <string name="yelling">Yelling</string>
    <string name="math">Math</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="alarm_name">Alarm Name:</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="thurs">Thurs</string>
    <string name="wed">Wed</string>
    <string name="tues">Tues</string>
    <string name="mon">Mon</string>
    <string name="sun">Sun</string>
    <string name="background_image">Background Image</string>
    <string name="button_to_go_to_add_alarm_screen">Button to go to add alarm screen</string>
    <string name="button_to_go_to_settings">Button to go to settings</string>
    <string name="button_to_go_to_calendar">Button to go to calendar</string>
    <string name="wakeups_0">Wakeups: 0</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="image_of_sun">Image of Sun</string>
    <string name="hi_there">Hi There!</string>
    <string name="get_started">Get Started</string>
    <string name="math_question">What is 5 + 3?</string>
    <string name="eagle_image">Eagle Image</string>
    <string name="_8">8</string>
    <string name="_10">10</string>
    <string name="_6">6</string>
    <string name="_9">9</string>
    <string name="wake_up">Wake up!</string>
    <string name="start_moving">Start moving!</string>
    <string name="yell_for_3_seconds_to_stop_the_alarm">Yell for 3 seconds to stop the alarm!</string>
    <string name="start_yelling">Start yelling!</string>
    <string name="keep_moving">Keep moving!</string>
    <string name="you_stopped_try_again">You stopped! Try again!</string>
    <string name="keep_yelling">Keep Yelling!</string>
    <string name="settings_title">Settings</string>
    <string name="language_button">Change Language</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="no_alarms_message">No alarms for selected date.</string>
    <string name="wakeup_counter">Wakeups: %1$d</string>
    <string name="day_selector_warning">If no day is selected, the alarm will be set for the current day of the week.</string>
    <string name="toast_correct">Correct! Have a great day!</string>
    <string name="toast_wrong">Wrong answer!</string>
    <string name="scan_cancelled">Scan cancelled. Please try again.</string>
    <string name="scan_prompt">Scan barcode to stop alarm</string>
    <string name="wrong_code">Wrong code. Try again.</string>
    <string name="camera_microphone_required">Camera and microphone are required. Closing app.</string>
    <string name="exact_alarm_title">Exact Alarm Permission</string>
    <string name="exact_alarm_message">To make sure alarms ring on time, please allow WakeBuddy to schedule exact alarms.</string>
    <string name="grant">Grant</string>
    <string name="later">Later</string>
    <string name="movement_alarm_success">Awesome! Alarm stopped after moving 10 seconds!</string>
    <string name="yelling_alarm_success">Awesome! Alarm stopped after yelling for 3 seconds!</string>
    <string name="mic_permission_required">Mic permission required!</string>
    <string name="yelling_alarm_dismissed">Nice lungs! Alarm dismissed.</string>
</resources>