<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment">

    <ImageView
        android:id="@+id/welcome_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/sky" />

    <ImageView
        android:id="@+id/sunImg"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/image_of_sun"
        android:src="@drawable/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/hi_there"
        android:shadowColor="#80000000"
        android:shadowDx="3"
        android:shadowDy="6"
        android:shadowRadius="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/welcome_background"
        app:layout_constraintTop_toBottomOf="@+id/sunImg" />

    <Button
        android:id="@+id/welcome_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>